[package]
name = "dummy_dependant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { path = "../../../serde" }

# `workspace.exclude` does not seem to work with doubly nested paths.
[workspace]